# llm-llama-cpp

./: pyproject.toml
node-llama-cpp/: package-lock.json  package.json
