[project]
name = "llm-llama-cpp"
version = "0.3"
description = "LLM plugin for running models using llama.cpp"
readme = "tea.yaml"
authors = [{name = "aawadat"}]
license = {text = "Apache-2.0"}
classifiers = [
    "License :: OSI Approved :: Apache Software License"
]
dependencies = [
    "llm",
    "httpx",
]

[project.urls]
Homepage = "https://github.com/aawadat/llm-llama-cpp"
Changelog = "https://github.com/aawadat/llm-llama-cpp/releases"
Issues = "https://github.com/aawadat/llm-llama-cpp/issues"
CI = "https://github.com/aawadat/llm-llama-cpp/actions"

[project.entry-points.llm]
llama_cpp = "llm_llama_cpp"

[project.optional-dependencies]
test = ["pytest"]
